@@ -1,3 +1,9 @@
+2007-03-29  Tom Tromey  <tromey@redhat.com>
+
+	PR libgcj/29869:
+	* gnu/java/util/jar/JarUtils.java (log): Commented out.
+	(readSFManifest): Don't log.
+
 2007-03-28  Casey Marshall  <csm@gnu.org>
 
 	* gnu/javax/net/ssl/provider/ClientHandshake.java (RSAGen.implRun):
